# movie-recommendation-system-

./: .render.yaml  README.md  app-simple.py  app-test.py  app.py  index.html  pyproject.toml  render.yaml  requirements-basic.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  setup.py
templates/: index.html
