[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommendation-system"
version = "1.0.0"
description = "A Flask-based movie recommendation system"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "pandas==2.1.4",
    "scikit-learn==1.3.2",
    "gunicorn==21.2.0",
] 